# effective_mobile/docs/swagger.json
@@ -24,6 +24,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "integer",
+                        "description": "size",
+                        "name": "size",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "description": "name",
                         "name": "name",
@@ -33,6 +39,30 @@
                         "type": "string",
                         "description": "surname",
                         "name": "surname",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "patronymic",
+                        "name": "patronymic",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "gender",
+                        "name": "gender",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "countryId",
+                        "name": "countryId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "age",
+                        "name": "age",
                         "in": "query"
                     }
                 ],
